certbot/minio-console-ingress-letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-letsencrypt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: minio-console.maulanaysfi.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-console
            port:
              number: 9090
  tls:
  - hosts:
    - minio-console.maulanaysfi.my.id
    secretName: minio-console-letsencrypt-tls
